--- a/index.html
+++ b/index.html
@@ -21,19 +21,25 @@
         
         <div class="right-section">
             <button class="btn">Activity</button>
-            <span class="img"><img alt="Param" class="_css-kMjrmT" src="https://d1w2poirtb3as9.cloudfront.net/default.jpeg?Expires=1744912636&amp;Signature=n6SL~TQUxc5DzXx~7gq3z4MF4~p-oK8eSRqGU3B7Yfnl6cVgy7tosWvoMrCSKXqBjyaMDvnDLoVPeOLwjePbKcTwKWeM7vg49kOcLt6Ac~N4hOSbUkA2Zb~QYI5KBlSQnb5~U~HBG5596URhF5sUHINUVRGgKPUL6U1WCkGvdBHszI53ZBHhiX1x3iR8a8QAul-78e3i4dHkg-xA7yMs-YbYWxOZSwsEGHJvYP6Rhqj12u-qQV0d85h5Vc~jDdCazf5m6VBkU3A5KhYE7XcXtlQdsZXmffaSfEe4faimbry16DnpKa6Qz6Nsv0lDoMexerLXXNwttuo7yJoln06Wzg__&amp;Key-Pair-Id=K36LFL06Z5BT10" height="40px"></span>
+            <span class="img"><img alt="Param" class="_css-kMjrmT" src="https://d1w2poirtb3as9.cloudfront.net/default.jpeg?Expires=1744912636&amp;Signature=n6SL~TQUxc5DzXx~7gq3z4MF4~p-oK8eSRqGU3B7Yfnl6cVgy7tosWvoMrCSKXqBjyaMDvnDLoVPeOLwjePbKcTwKWeM7vg49kOcLt6Ac~N4hOSbUkA2Zb~QYI5KBlSQnb5~U~HBG5596URhF5sUHINUVRGgKPUL6U1WCkGvdBHszI53ZBHhiX1x3iR8a8QAul-78e3i4dHkg-xA7yMs-YbYWxOZSwsEGHJvYP6Rhqj12u-qQV0d85h5Vc~jDdCazf5m6VBkU3A5KhYE7XcXtlQdsZXmffaSfEe4faimbry16DnpKa6Qz6Nsv0lDoMexerLXXNwttuo7yJoln06Wzg__&amp;Key-Pair-Id=K36LFL06Z5BT10" height="40px" style="border-radius: 50%;"></span>
             <span><i class="fa-solid fa-angle-down"></i></span>
         </div>
     </nav>
 
-    <br>
-
 <section class="section">
     <div class="box">
-        <h2>Get a Ride</h2>
+        <h2>For a Farmer</h2><br><br>
+        <button>Weather Updates</button><br><br><br>
+        <button>Crop Growing Tips</button><br><br><br>
+        <button>Government Schemes</button><br><br><br>
+        <button>Farming Tools</button><br><br><br>
+        <button>Fertilizer/Pesticide Info</button><br><br><br>
+        <button>Search</button>
     </div>
+
     <div class="iframe">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d14682.536436726994!2d72.55490559999998!3d23.0738721!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1744876340120!5m2!1sen!2sin" height="500px" width="750px"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d14682.536436726994!2d72.55490559999998!3d23.0738721!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1744876340120!5m2!1sen!2sin" height="450px" width="730px"
+        style="border-radius: 25px;"></iframe>
     </div>
 </section>
     
