--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <button>Government Schemes</button><br><br><br>
         <button>Farming Tools</button><br><br><br>
         <button>Fertilizer/Pesticide Info</button><br><br><br>
-        <button>Search</button>
+        <button id="icon"> <span><i class="fa-solid fa-magnifying-glass fa-xs"></i></span> Search</button>
     </div>
 
     <div class="iframe">
