--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h2>For a Farmer</h2><br><br>
         <button>Weather Updates</button><br><br><br>
         <button>Crop Growing Tips</button><br><br><br>
-        <button>Government Schemes</button><br><br><br>
+        <button> <span><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQn5uDUFPgf7p8SojaD68ZbRm5bGqrR94Ps-A&s" alt="" height="15px" width="auto"></span> Farm Location</button><br><br><br>
         <button>Farming Tools</button><br><br><br>
         <button>Fertilizer/Pesticide Info</button><br><br><br>
         <button id="icon"> <span><i class="fa-solid fa-magnifying-glass fa-xs"></i></span> Search</button>
