--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="right-section">
             <button class="btn">Activity</button>
             <span class="img"><img alt="Param" class="_css-kMjrmT" src="https://d1w2poirtb3as9.cloudfront.net/default.jpeg?Expires=1744912636&amp;Signature=n6SL~TQUxc5DzXx~7gq3z4MF4~p-oK8eSRqGU3B7Yfnl6cVgy7tosWvoMrCSKXqBjyaMDvnDLoVPeOLwjePbKcTwKWeM7vg49kOcLt6Ac~N4hOSbUkA2Zb~QYI5KBlSQnb5~U~HBG5596URhF5sUHINUVRGgKPUL6U1WCkGvdBHszI53ZBHhiX1x3iR8a8QAul-78e3i4dHkg-xA7yMs-YbYWxOZSwsEGHJvYP6Rhqj12u-qQV0d85h5Vc~jDdCazf5m6VBkU3A5KhYE7XcXtlQdsZXmffaSfEe4faimbry16DnpKa6Qz6Nsv0lDoMexerLXXNwttuo7yJoln06Wzg__&amp;Key-Pair-Id=K36LFL06Z5BT10" height="40px" style="border-radius: 50%;"></span>
-            <span><i class="fa-solid fa-angle-down"></i></span>
+            <span class="span"><i class="fa-solid fa-angle-down"></i></span>
         </div>
     </nav>
 
@@ -31,10 +31,10 @@
         <h2>For a Farmer</h2><br><br>
         <button>Weather Updates</button><br><br><br>
         <button>Crop Growing Tips</button><br><br><br>
-        <button> <span><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQn5uDUFPgf7p8SojaD68ZbRm5bGqrR94Ps-A&s" alt="" height="15px" width="auto"></span> Farm Location</button><br><br><br>
+        <button> <span><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQn5uDUFPgf7p8SojaD68ZbRm5bGqrR94Ps-A&s" alt="" height="15px" width="auto"> &nbsp; </span> Farm Location</button><br><br><br>
         <button>Farming Tools</button><br><br><br>
         <button>Fertilizer/Pesticide Info</button><br><br><br>
-        <button id="icon"> <span><i class="fa-solid fa-magnifying-glass fa-xs"></i></span> Search</button>
+        <button id="icon"> <span><i class="fa-solid fa-magnifying-glass fa-xs"></i> &nbsp; </span>Search</button>
     </div>
 
     <div class="iframe">
@@ -42,7 +42,7 @@
         style="border-radius: 25px;"></iframe>
     </div>
 </section>
-    
+
 
 </body>
 </html>
